--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,10 @@
 <resources>
-    <string name="app_name">News App</string>
+    <string name="app_name">Notícias</string>
     <string name="tools_article_title">Melbourne, na Austrália, volta a decretar confinamento contra o
         coronavírus - G1</string>
     <string name="tools_article_desc">Medidas de restrição na circulação na cidade do estado de
         Victoria deve durar pelo menos seis semanas.Medidas de restrição na circulação na cidade do estado de Victoria deve durar pelo menos seis semanas.Medidas de restrição na circulação na cidade do estado de Victoria deve durar pelo menos seis semanas.</string>
-    <string name="welcome_quiz">Welcome to the Brazil Quiz!</string>
-    <string name="play_btn">play</string>
-    <string name="img_desc">Brazil flag with question marks</string>
-    <string name="doneBtn">done</string>
-    <string name="answer">Answer</string>
+    <string name="description_image">Image representing the article</string>
+    <string name="more_info">Mais Informações</string>
+    <string name="go_back_button">Voltar ao topo da página</string>
 </resources>
